[project]
name = "payment-service"
version = "0.2.1"
description = "Service for Processing Payments"
authors = [
    {name = "Gabriel Bouchard",email = "gabouchard2002@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.123.10,<0.124.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "yookassa (>=3.8.0,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
